# Site-and-Device-Management-API

./: .gitignore  README.md  pyproject.toml  run_postgresql_timescaledb.sh
docker/: docker-compose.yml  pg_hba.conf  postgres-init.conf  schema.sql  timescale.Dockerfile  timescaledb_postgresql.conf
src/: config.py  dependencies.py  main.py  migration.py  models.py
src/db/: database.py  devices_repository.py  metrics_repository.py  repository.py  site_repository.py
src/routers/: devices.py  metrics.py  router_model.py  sites.py  users.py
test/: test_db.py  test_users.py
