[project]
name = "energy-management-system"
version = "0.1.0"
description = "Energy Management System API"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.116.0",
    "uvicorn>=0.35.0",
    "pyjwt>=2.8.0",
    "cryptography>=41.0.7",
    "sqlalchemy>=2.0.41",
    "python-multipart>=0.0.6",
    "loguru>=0.7.3",
    "asyncmock>=0.4.2",
    "asyncpg>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "faker>=37.4.2",
    "pytest>=8.4.1",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "pytest-mock>=3.14.0",
    "greenlet>=3.2.3",
]

# UV-specific configuration
[tool.uv]
dev-dependencies = [
    "faker>=37.4.2",
    "pytest>=8.4.1",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "pytest-mock>=3.14.0",
    "greenlet>=3.2.3",
]

# UV workspace configuration (optional)
[tool.uv.workspace]
members = ["."]

# UV sources (if you need specific package sources)
[tool.uv.sources]
# Example: local development packages
# my-package = { path = "../my-package", editable = true }

# Build system (simplified for uv)
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Hatch configuration (works well with uv)
[tool.hatch.build.targets.wheel]
packages = ["src/energy_management_system"]

[tool.hatch.version]
path = "src/energy_management_system/__init__.py"